complete most UI presentations

--- a/AutoComeV1/Information.xaml
+++ b/AutoComeV1/Information.xaml
@@ -7,13 +7,13 @@
         mc:Ignorable="d"
         Title="Information" Height="152.055" Width="300">
     <Grid>
-        <TextBox VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="72" TextWrapping="Wrap" Text="Actions Completed." VerticalAlignment="Top" Width="213" Margin="36,0,0,0" FontSize="14">
+        <TextBox VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="72" TextWrapping="Wrap" Text="Actions Completed." VerticalAlignment="Top" Width="213" Margin="36,0,0,0" FontSize="14" BorderBrush="{x:Null}">
             <TextBox.Background>
                 <ImageBrush ImageSource="pictures/completed.png"/>
             </TextBox.Background>
         </TextBox>
-        <Button x:Name="operateButton" Content="OK" HorizontalAlignment="Left" Margin="153,77,0,0" VerticalAlignment="Top" Width="96" Height="34" Background="#FFBDFF97"/>
-        <Button x:Name="cancleButton" Content="Undo" HorizontalAlignment="Left" Margin="31,77,0,0" VerticalAlignment="Top" Width="98" Height="34" Background="White"/>
+        <Button x:Name="operateButton" Content="OK" HorizontalAlignment="Left" Margin="153,77,0,0" VerticalAlignment="Top" Width="96" Height="34" Background="#FFBDFF97" Click="OKClick"/>
+        <Button x:Name="cancleButton" Content="Undo" HorizontalAlignment="Left" Margin="31,77,0,0" VerticalAlignment="Top" Width="98" Height="34" Background="White" Click="UndoClick"/>
 
 
     </Grid>
