--- a/AutoComeV1/PDF.xaml
+++ b/AutoComeV1/PDF.xaml
@@ -10,10 +10,13 @@
         <ImageBrush ImageSource="pictures/pdfEmpty.jpg"/>
     </Window.Background>
     <Grid>
-        <TextBox x:Name="title" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="96" Margin="23,127,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" Width="546" FontSize="22" FontWeight="Bold" FontFamily="Segoe UI Black" />
-        <Image x:Name="authors" HorizontalAlignment="Left" Height="100" Margin="23,228,0,0" VerticalAlignment="Top" Width="546"/>
-        <TextBox x:Name="_abstract" HorizontalAlignment="Left" Height="136" Margin="23,333,0,0" TextWrapping="Wrap" Text="Abstract" VerticalAlignment="Top" Width="264"/>
-        <TextBox x:Name="content" HorizontalAlignment="Left" Height="136" Margin="287,333,0,0" TextWrapping="Wrap" Text="Content " VerticalAlignment="Top" Width="282"/>
+        <TextBox x:Name="title" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="96" Margin="23,127,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" Width="546" FontSize="18" FontWeight="Bold" FontFamily="Segoe UI Black" BorderBrush="{x:Null}" />
+        <TextBox x:Name="_abstract" HorizontalAlignment="Left" Height="130" Margin="23,243,0,0" TextWrapping="Wrap" Text="abstract " VerticalAlignment="Top" Width="264" BorderBrush="Transparent" FontSize="11" Cursor="Arrow" IsReadOnly="True"/>
+        <TextBox x:Name="content1" HorizontalAlignment="Left" Height="246" Margin="287,223,0,0" TextWrapping="Wrap" Text="Content " VerticalAlignment="Top" Width="282" BorderBrush="Transparent" FontSize="11" Cursor="Arrow" IsReadOnly="True"/>
+        <TextBox x:Name="content0" HorizontalAlignment="Left" Height="73" Margin="23,393,0,0" TextWrapping="Wrap" Text="content0" VerticalAlignment="Top" Width="264" BorderBrush="Transparent" FontSize="11"  Cursor="Arrow" IsReadOnly="True" />
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="23,223,0,0" TextWrapping="Wrap" Text="Abstract" VerticalAlignment="Top" Width="264" FontWeight="Bold" BorderBrush="Transparent" Cursor="Arrow"  IsReadOnly="True"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="23,373,0,0" TextWrapping="Wrap" Text="Introduction" VerticalAlignment="Top" Width="264" FontWeight="Bold" BorderBrush="Transparent"  Cursor="Arrow" IsReadOnly="True"/>
+        <TextBlock x:Name="fileTitle" HorizontalAlignment="Left" Margin="32,8,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="430"/>
 
 
     </Grid>
