--- a/AutoComeV1/Settings.xaml
+++ b/AutoComeV1/Settings.xaml
@@ -5,42 +5,61 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutoComeV1"
         mc:Ignorable="d"
-        Title="Settings" Height="341.096" Width="438.905">
+        Title="Settings" Height="462.636" Width="438.905">
     <Grid Background="#FFE0EAFF" Margin="0,0,0,-1">
-        <TextBox HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" Text="We have detected your repetitive steps, &#xD;&#xA;Please unselect the steps you do not want to repeat." VerticalAlignment="Top" Width="396" Margin="18,20,0,0" FontSize="14" Background="{x:Null}"/>
-        <Button x:Name="step1" Content="Step1" HorizontalAlignment="Left" Margin="18,76,0,0" VerticalAlignment="Top" Width="195" Height="50">
+        <TextBox x:Name="informationText" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" Text="We have detected your repetitive steps, &#xD;&#xA;Please unselect the steps you do not want to repeat." VerticalAlignment="Top" Width="396" Margin="18,15,0,0" FontSize="14" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        <Button x:Name="step1" Content="Step1" HorizontalAlignment="Left" Margin="18,60,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" >
             <Button.Background>
                 <ImageBrush ImageSource="pictures/selectedBackground.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="step2" Content="Step2" HorizontalAlignment="Left" Margin="219,76,0,0" VerticalAlignment="Top" Width="195" Height="50">
+        <Button x:Name="step2" Content="Step2" HorizontalAlignment="Left" Margin="18,114,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick">
             <Button.Background>
                 <ImageBrush ImageSource="pictures/selectedBackground.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="step3" Content="Step3" HorizontalAlignment="Left" Margin="18,132,0,0" VerticalAlignment="Top" Width="195" Height="50">
+        <Button x:Name="step3" Content="Step3" HorizontalAlignment="Left" Margin="18,169,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick">
             <Button.Background>
                 <ImageBrush ImageSource="pictures/selectedBackground.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="step4" Content="Step4" HorizontalAlignment="Left" Margin="219,132,0,0" VerticalAlignment="Top" Width="195" Height="50">
+        <Button x:Name="step4" Content="Step4" HorizontalAlignment="Left" Margin="18,224,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick">
             <Button.Background>
                 <ImageBrush ImageSource="pictures/selectedBackground.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="step5" Content="Step5" HorizontalAlignment="Left" Margin="18,187,0,0" VerticalAlignment="Top" Width="195" Height="50">
+        <Button x:Name="step5" Content="Step5" HorizontalAlignment="Left" Margin="18,279,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick">
             <Button.Background>
                 <ImageBrush ImageSource="pictures/selectedBackground.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="step6" Content="Step6" HorizontalAlignment="Left" Margin="219,187,0,0" VerticalAlignment="Top" Width="195" Height="50">
+        <Button x:Name="step6" Content="Step6" HorizontalAlignment="Left" Margin="18,334,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick">
             <Button.Background>
                 <ImageBrush ImageSource="pictures/selectedBackground.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="operateButton" Content="Repeat" HorizontalAlignment="Left" Margin="219,252,0,0" VerticalAlignment="Top" Width="195" Height="34" Background="#FFBDFF97"/>
-        <Button x:Name="cancleButton" Content="Cancle" HorizontalAlignment="Left" Margin="17,252,0,0" VerticalAlignment="Top" Width="196" Height="34" Background="White" Click="Cancle_Click"/>
-        <Image x:Name="progressing" HorizontalAlignment="Left" Height="47" Margin="188,60,0,0" VerticalAlignment="Top" Width="50"/>
+        <Button x:Name="operateButton" Content="Repeat" HorizontalAlignment="Left" Margin="219,389,0,0" VerticalAlignment="Top" Width="195" Height="34" Background="#FFBDFF97" Click="OperateClick">
+            <Button.Triggers>
+                <EventTrigger RoutedEvent="Button.Click">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetName="xRotate2"
+                                     Storyboard.TargetProperty="Angle"
+                                     From="0" To="360" Duration="0:0:3"
+                                     RepeatBehavior="Forever" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+            </Button.Triggers>
+        </Button>
+        <Button x:Name="cancleButton" Content="Cancle" HorizontalAlignment="Left" Margin="10,389,0,0" VerticalAlignment="Top" Width="196" Height="34" Background="White" Click="Cancle_Click"/>
+        <Image x:Name="progressing"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Height="47" Margin="188,60,0,0" VerticalAlignment="Top" Width="50" Source="pictures/progress.png">
+            <Image.RenderTransform  >
+                <RotateTransform x:Name="xRotate2" Angle="0" />
+            </Image.RenderTransform>
+        </Image>
 
 
     </Grid>
