--- a/AutoComeV1/MainWindow.xaml
+++ b/AutoComeV1/MainWindow.xaml
@@ -6,7 +6,7 @@
         
         mc:Ignorable="d"
         Title="MainWindow" Height="820" Width="1600"
-        ResizeMode="NoResize">
+        ResizeMode="NoResize" Activated="MainActivated">
 
     <Window.Background>
         <ImageBrush ImageSource="pictures/desktopEmpty.jpg"/>
@@ -51,7 +51,19 @@
         <Rectangle x:Name="back9" HorizontalAlignment="Left" Height="130" Margin="436,321,0,0" VerticalAlignment="Top" Width="100"/>
         <Rectangle x:Name="back10" HorizontalAlignment="Left" Height="130" Margin="590,321,0,0" VerticalAlignment="Top" Width="100"/>
 
-        <Button Content=" " HorizontalAlignment="Left" Height="668" Margin="263,123,0,0" VerticalAlignment="Top" Width="1331" Background="Transparent" BorderBrush="Transparent" Opacity="0" Click="Click" FontWeight="Bold"/>
+        <Rectangle x:Name="active0" HorizontalAlignment="Left" Height="130" Margin="287,168,0,0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="active1" HorizontalAlignment="Left" Height="130" Margin="436,168,0,0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="active2" HorizontalAlignment="Left" Height="130" Margin="590,168,0,0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="active3" HorizontalAlignment="Left" Height="130" Margin="740,168,0,0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="active4" HorizontalAlignment="Left" Height="130" Margin="886,168,0,0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="active5" HorizontalAlignment="Left" Height="130" Margin="1040,168,0,0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="active6" HorizontalAlignment="Left" Height="130" Margin="1188,168,0,0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="active7" HorizontalAlignment="Left" Height="130" Margin="1328,168,0,0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="active8" HorizontalAlignment="Left" Height="130" Margin="287,321,0,0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="active9" HorizontalAlignment="Left" Height="130" Margin="436,321,0,0" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="active10" HorizontalAlignment="Left" Height="130" Margin="590,321,0,0" VerticalAlignment="Top" Width="100"/>
+
+        <Button x:Name="unselectButton" Content=" " HorizontalAlignment="Left" Height="668" Margin="263,123,0,0" VerticalAlignment="Top" Width="1331" Background="Transparent" BorderBrush="Transparent" Opacity="0" Click="Click" FontWeight="Bold"/>
 
         <Button x:Name="button0" Content=" " HorizontalAlignment="Left" Height="130" Margin="287,168,0,0" VerticalAlignment="Top" Width="102" Background="Transparent" BorderBrush="Transparent" Opacity="0" MouseDoubleClick="DoubleClick" Click="Click"/>
         <Button x:Name="button1" Content=" " HorizontalAlignment="Left" Height="130" Margin="436,168,0,0" VerticalAlignment="Top" Width="102" Background="Transparent" BorderBrush="Transparent" Opacity="0" MouseDoubleClick="DoubleClick" Click="Click"/>
